force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Industry_Classification__c.field-meta.xml
<CustomField>
    <fullName>Industry_Classification__c</fullName>
    <formula>TEXT( Host_Application__r.Industry_Classification__c )</formula>
    <label>Industry Classification</label>
    <type>Text</type>
</CustomField>