force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Kick_off_Call_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Kick_off_Call_Summary_Notes__c</fullName>
    <description>Notes from kick-off call.</description>
    <inlineHelpText>Enter kick-off call summary notes here.</inlineHelpText>
    <label>Kick-off Call Summary Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>