force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Kilowatt_Signup__c.field-meta.xml
<CustomField>
    <fullName>Kilowatt_Signup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the fellow signed up for the Kilowatt</inlineHelpText>
    <label>Kilowatt Signup</label>
    <type>Checkbox</type>
</CustomField>