force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Matching_Notes_from_EDF__c.field-meta.xml
<CustomField>
    <fullName>Matching_Notes_from_EDF__c</fullName>
    <label>Matching Notes from EDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>