force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Media_Profile__c.field-meta.xml
<CustomField>
    <fullName>Media_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Profile</label>
    <type>Checkbox</type>
</CustomField>