force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Midpoint_Complete__c.field-meta.xml
<CustomField>
    <fullName>Midpoint_Complete__c</fullName>
    <label>Midpoint Complete</label>
    <type>Date</type>
</CustomField>