force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget lacking</fullName>
            </value>
            <value>
                <fullName>Budget cycle</fullName>
            </value>
            <value>
                <fullName>Timing (unrelated to budget cycle)</fullName>
            </value>
            <value>
                <fullName>Not interested in EE</fullName>
            </value>
            <value>
                <fullName>Not right contact</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>