force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Not_Interested_Reason_other__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason_other__c</fullName>
    <inlineHelpText>Only complete if &quot;Other&quot; selected for previous question.</inlineHelpText>
    <label>Not Interested Reason (other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>