force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Orientation_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fellow confirmed if they watched the Orientation Webinar</inlineHelpText>
    <label>Orientation Webinar</label>
    <type>Checkbox</type>
</CustomField>