force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Potential_for_re_up__c.field-meta.xml
<CustomField>
    <fullName>Potential_for_re_up__c</fullName>
    <label>Potential for re-up?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Medium</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - High</fullName>
            </value>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>