force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Press_Contact__c.field-meta.xml
<CustomField>
    <fullName>Press_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Press Contact from Application</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Press Contact)</relationshipLabel>
    <relationshipName>Climate_Corps_Fellows1</relationshipName>
    <type>Lookup</type>
</CustomField>