force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <formula>TEXT(Host_Application__r.Project_Category__c)</formula>
    <label>Project Category</label>
    <type>Text</type>
</CustomField>