force-app/main/default/objects/Climate_Corps_Engagement__c/fields/ProjectGoals__c.field-meta.xml
<CustomField>
    <fullName>ProjectGoals__c</fullName>
    <inlineHelpText>Describe the main goals of your project that were set out at the beginning of the summer.</inlineHelpText>
    <label>Project Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>