force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Public_Summary_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Summary_Approval_Status__c</fullName>
    <description>Describe the main goals of your project that were set out at the beginning of the summer.</description>
    <inlineHelpText>Describe the main goals of your project that were set out at the beginning of the summer.</inlineHelpText>
    <label>Public Summary Approval Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>