force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Reason_for_Challenging_Match__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Challenging_Match__c</fullName>
    <inlineHelpText>Please indicate why this may be a difficult placement or why it&apos;s considered a priority host.</inlineHelpText>
    <label>Reason for Priority or Challenging Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited fellow criteria from host</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Important Host Relationship</fullName>
            </value>
            <value>
                <fullName>Politically Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>Specific Value to other EDF programs</fullName>
            </value>
            <value>
                <fullName>Sensitive to Caliber of Fellow</fullName>
            </value>
            <value>
                <fullName>Technical project scope</fullName>
            </value>
            <value>
                <fullName>Unique Project or Skillset Required</fullName>
            </value>
            <value>
                <fullName>Vague workplan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>