force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Registered_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fellow confirmed in the portal that they registered for training.</inlineHelpText>
    <label>Registered for Training</label>
    <type>Checkbox</type>
</CustomField>