force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Relationship_Strength_At_End_of_Fellowsh__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Strength_At_End_of_Fellowsh__c</fullName>
    <label>Relationship Strength At End of Fellowsh</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>