force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Requested_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fellow indicated they submitted a form to request a mentor</inlineHelpText>
    <label>Requested Mentor</label>
    <type>Checkbox</type>
</CustomField>