force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Reviewed_HR_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_HR_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the fellow watched the HR webinar (EDF paid fellows only).</inlineHelpText>
    <label>Reviewed HR Webinar</label>
    <type>Checkbox</type>
</CustomField>