force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Reviewed_Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Work_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the fellow reviewed the work authorization policy (international students only).</inlineHelpText>
    <label>Reviewed Work Authorization</label>
    <type>Checkbox</type>
</CustomField>