force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Secondary Contact)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>