force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Star__c.field-meta.xml
<CustomField>
    <fullName>Star__c</fullName>
    <description>What star should be visible on Fellow Portal for this Engagement.</description>
    <formula>IF (Number_Of_Consider_Me__c &gt; 20, 
    &quot;GOLD&quot;,  
    IF ( Competitive_Host_Location__c = TRUE, 
        &quot;GOLD&quot;,  
        IF (Prioritize_for_Consider_Mes__c = TRUE, 
            &quot;BLUE&quot;, 
            &quot;&quot;
        )
    )
)</formula>
    <label>Star</label>
    <type>Text</type>
</CustomField>