force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Submit_Final_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Submit_Final_Deliverables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Final Deliverables</label>
    <type>Checkbox</type>
</CustomField>