force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Submit_Start_End_dates__c.field-meta.xml
<CustomField>
    <fullName>Submit_Start_End_dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Start &amp; End dates</label>
    <type>Checkbox</type>
</CustomField>