force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Submit_Workplan__c.field-meta.xml
<CustomField>
    <fullName>Submit_Workplan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Workplan</label>
    <type>Checkbox</type>
</CustomField>