force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Summer_Email__c.field-meta.xml
<CustomField>
    <fullName>Summer_Email__c</fullName>
    <label>Summer Email</label>
    <type>Email</type>
</CustomField>