force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Summer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Summer_Phone__c</fullName>
    <label>Summer Phone</label>
    <type>Phone</type>
</CustomField>