force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Thank_you_note_sent__c.field-meta.xml
<CustomField>
    <fullName>Thank_you_note_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surveys sent</label>
    <type>Checkbox</type>
</CustomField>