force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Training_Info_Survey__c.field-meta.xml
<CustomField>
    <fullName>Training_Info_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Info &amp; Survey</label>
    <type>Checkbox</type>
</CustomField>