force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Twitter_Handle__c.field-meta.xml
<CustomField>
    <fullName>Twitter_Handle__c</fullName>
    <formula>Fellow_Name__r.Twitter_Handle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twitter Handle</label>
    <type>Text</type>
</CustomField>