force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Wholesale_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Wholesale_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Was this organization recruited through a wholesale or partnership approach? Please indicate which organization or partner</inlineHelpText>
    <label>Wholesale/Partnership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Wholesale/Partnership)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements3</relationshipName>
    <type>Lookup</type>
</CustomField>