force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Workplan_Focus__c.field-meta.xml
<CustomField>
    <fullName>Workplan_Focus__c</fullName>
    <label>Workplan Focus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Traditional EE Projects</fullName>
            </value>
            <value>
                <fullName>Strategy or Tools</fullName>
            </value>
            <value>
                <fullName>EE Strategy</fullName>
            </value>
            <value>
                <fullName>Employee Engagement</fullName>
            </value>
            <value>
                <fullName>Behavior Change</fullName>
            </value>
            <value>
                <fullName>Data Centers</fullName>
            </value>
            <value>
                <fullName>Industrial EE</fullName>
            </value>
            <value>
                <fullName>Decision Support Tools</fullName>
            </value>
            <value>
                <fullName>Funding Mechanisms</fullName>
            </value>
            <value>
                <fullName>Energy Information Systems</fullName>
            </value>
            <value>
                <fullName>Products or Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>