force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Workplan_for_Student_Portal__c.field-meta.xml
<CustomField>
    <fullName>Workplan_for_Student_Portal__c</fullName>
    <inlineHelpText>Shows on ConsiderMe</inlineHelpText>
    <label>Workplan for Student Portal</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>