force-app/main/default/objects/Climate_Corps_Engagement__c/fields/Workplan_from_App__c.field-meta.xml
<CustomField>
    <fullName>Workplan_from_App__c</fullName>
    <label>Workplan Content from Application</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>