force-app/main/default/objects/Climate_Corps_Engagement__c/fields/X2_Preferred_skillsets_and_qualities__c.field-meta.xml
<CustomField>
    <fullName>X2_Preferred_skillsets_and_qualities__c</fullName>
    <label>2. Preferred skillsets and qualities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>