force-app/main/default/objects/Climate_Corps_Engagement__c/fields/X2_Team_setting__c.field-meta.xml
<CustomField>
    <fullName>X2_Team_setting__c</fullName>
    <label>2. Team setting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>