force-app/main/default/objects/Climate_Corps_Engagement__c/fields/X3_HR_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>X3_HR_Restrictions__c</fullName>
    <label>3. HR Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>