force-app/main/default/objects/Climate_Corps_Engagement__c/fields/X3_Other__c.field-meta.xml
<CustomField>
    <fullName>X3_Other__c</fullName>
    <label>3. Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>